--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dynamic Programming Notebook\n",
+    "\n",
+    "Based On: [Dynamic Programming - Learn to Solve Algorithmic Problems & Coding Challenges](https://www.youtube.com/watch?v=oBt53YbR9Kk)\n",
+    "\n",
+    "Problems optimized\n",
+    "* Fibonacci Sequence\n",
+    "* Grid Traveler Problem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -13,14 +26,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fibonacci Sequence"
+    "## Fibonacci Sequence"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recursive Implementation\n",
+    "### Recursive Implementation\n",
     "Takes a long time to run, poor time complexity of 2^n"
    ]
   },
@@ -71,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimization Fibonnaci\n",
+    "### Optimization Fibonnaci\n",
     "When visualizing, we can see subtree repititons. If we were to save a subtree once it is calculated, we can use the saved tree for the repeating calculations to improve the speed.\n",
     "\n",
     "Time complexity now is O(n)"
@@ -130,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top Left to Bottom Right"
+    "## Top Left to Bottom Right"
    ]
   },
   {
@@ -181,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recursive Implementation\n",
+    "### Recursive Implementation\n",
     "\n",
     "For each dimension, we are calculating the solutions to already solved grids again and again eg: 1,2 appears twice. Time complexity of O(2^n+m)\n",
     "\n",
@@ -224,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimizing with Memoization"
+    "### Optimizing with Memoization"
    ]
   },
   {
@@ -270,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The new solution due it it calculating only the new grids has TIme Complexity of O(n+m)."
+    "The new solution due it it calculating only the new grids has TIme Complexity of O(n*m)."
    ]
   }
  ],
